# AiceCube

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/ipc/: IpcMessages.h  MessageHandler.cpp  MessageHandler.h  WebSocketServer.cpp  WebSocketServer.h
engine/src/: EngineMain.cpp
server/: main.py
src/: AgentCommand.h  AgentLogic.cpp  AgentLogic.h  AgentPanel.cpp  AgentPanel.h  ApiClient.cpp  ApiClient.h  AppState.cpp  AppState.h  AudioEngine.cpp  AudioEngine.h  BottomPaneComponent.cpp  BottomPaneComponent.h  CommandExecutor.cpp  CommandExecutor.h  LeftPaneComponent.cpp  LeftPaneComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MusicData.h  PianoRollComponent.cpp  PianoRollComponent.h  RightPaneComponent.cpp  RightPaneComponent.h  SimpleSynth.h  TimelineComponent.cpp  TimelineComponent.h  TrackHeaderListComponent.cpp  TrackHeaderListComponent.h  TransportBarComponent.cpp  TransportBarComponent.h
src/components/: BrowserComponent.cpp  BrowserComponent.h  ClipComponent.cpp  ClipComponent.h  MixerComponent.cpp  MixerComponent.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h  PianoRollEditorComponent.cpp  PianoRollEditorComponent.h  PluginWindow.h  SettingsComponent.cpp  SettingsComponent.h  TimelineComponent.cpp  TimelineComponent.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackHeaderListComponent.cpp  TrackHeaderListComponent.h  TransportBarComponent.cpp  TransportBarComponent.h
src/engine/: AudioEngine.cpp  AudioEngine.h
src/model/: MusicData.h  ProjectSerializer.h  ProjectState.cpp  ProjectState.h
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src-tauri/: tauri.conf.json
ui/src/ipc/: EngineClient.ts
ui/src/render/: TimelineCanvas.ts
ui/src/state/: useEngineState.ts
ui/src/types/: daw.ts
ui/src/views/: Timeline.css  Timeline.tsx  TrackHeaders.css  TrackHeaders.tsx  TransportBar.css  TransportBar.tsx
